# whatever

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  nginx.conf  setup.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: agents_sdk.py  api.py  api_agents.py  api_v2.py  auth.py  database.py  dynamic.py  exceptions.py  main.py  middleware.py  models.py  openai_agents.py  orchestration.py  registry.py  schemas.py  validators.py
backend/data/: agent_platform.db
backend/tests/: test_services.py
docs/: action_plan.md  architecture_overview.md  concepts.md  implementation_spec.md
frontend/: Dockerfile  README.md  app.js  index.html  nginx.conf  package-lock.json  package.json  styles.css
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AgentsPage.tsx  ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  MetaAgentPage.tsx
frontend/src/types/: index.ts
